--- a/posts.html
+++ b/posts.html
@@ -66,7 +66,9 @@
 
 						
 <p>	
-
+Conference Speaker, The effects of bonus pay when working in a team; evidence from strawberry pickers in the field, Joint Initiative for Latin American Experimental Economics (JILAEE), 2/22
+<br></br>
+Seminar Speaker, The effects of bonus pay when working in a team; evidence from strawberry pickers in the field. Centre for Environmental and Resource Economics (CERE), 10/21
 <br></br>
 Conference Speaker, Revealing Group Choices: the Demand for Index Insurance, Experimental Economics Association, Los Angeles, California, 10/19
 <br></br>
