--- a/teaching.html
+++ b/teaching.html
@@ -79,6 +79,10 @@
 				
 
 	<h1>teaching</h1>
+		Cal Poly, Economics 552 Machine Learning and Causal Inference, Spring 2022 - present. 
+		<br></br>
+		Cal Poly, Economics 580 Special Projects joint with the World Bank, Spring 2021 - present. 
+		<br></br>
 		Cal Poly, Economics 395 Programming for Economics and Analytics, Spring 2017 - present. Thanks to <a href="https://learn.datacamp.com/">DataCamp </a> for supplementary exercises. 
 		<br></br>
 		Cal Poly, Economics 201 Survey of Economics, Winter 2017 - present
