--- a/publications.html
+++ b/publications.html
@@ -135,6 +135,11 @@
 	<br></br>
 	<a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">World Bank Policy brief</a> on using local social networks in agricultural training.
 
+<br></br>
+	Vasilaky, Kathryn, "Єдиний Економічний Простір : Наслідки для України" (2004) <em><a href="https://github.com/kathrynthegreat/kathrynthegreat.github.io/blob/master/NTSH130.pdf">Shevchenko Scientific Society</a></em>.
+	
+
+
 
 
 	<h1>posts</h1>
