--- a/teaching.html
+++ b/teaching.html
@@ -79,7 +79,7 @@
 				
 
 	<h1>teaching</h1>
-		Cal Poly, Economics 552 Machine Learning and Causal Inference, Spring 2022 - present. 
+		Cal Poly, Economics 552 Causal Inference for Machine Learning, Spring 2022 - present. 
 		<br></br>
 		Cal Poly, Economics 580 Special Projects joint with the World Bank, Spring 2021 - present. 
 		<br></br>
