--- a/field.html
+++ b/field.html
@@ -84,7 +84,9 @@ PhD Thesis, World Bank DECRG (Markus Goldstein) Funding, Weak Ties and Technolog
 
 
 <h1>field work</h1>
-India (Maharasthra)  Multimodal Satellite Rainfall Measurement for Index Insurance. Bill and Melinda Gates Foundation, Nagpur, Maharashtra, India, May - June 2016 - 2017.
+Central Coast (California) Immigration Reform and Farm Labor Shortages. USDA NIFA, June - October 2020.
+<br></br>
+India (Maharasthra)  Multimodal Satellite Rainfall Measurement for Index Insurance. Bill and Melinda Gates Foundation, May - June 2016 - 2017.
 <br></br>
 Dominican Republic (Northern) Group Insurance and Informal Networks. International Research Institute for Climate and Society, Columbia University, USAID and Reddom, January 2014 and September 2016.
 <br></br>
