--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@
 <h1>publications</h1>
 						
 <p> <br></br>
-	Ovaisi, Zohreh, Kathryn Vasilaky, Elena Zheleva. Propensity-independent Bias Recovery in Offline Learning-to-rank Systems, (2021) 44th International ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR).
+	Ovaisi, Zohreh, Kathryn Vasilaky, Elena Zheleva. Propensity-independent Bias Recovery in Offline Learning-to-rank Systems, (2021) <em>44th International ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR)</em>.
 	<br></br>
 	Vasilaky, Kathryn, Michelle Brock, <a href= https://doi.org/10.1007/s40881-020-00090-5>Power(ful) Guidelines for Experimental Economists</a>, (2020) <em>Journal of the Experimental Science Association</em>.
 	<br></br>
