--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,11 @@
 				<div id="content">
 				
 <h1>publications</h1>
-						
+
+	Hamilton, S. and Richards, T. and Shafran, A. and Vasilaky, K. <a href= https://onlinelibrary.wiley.com/doi/full/10.1111/ajae.12273>Farm labor productivity and the impact of mechanization
+aky</a>, (2020) <em>American Journal of Agricultural Economics, 104 (4), 1435-1459.</em>.
+	<br></br>
+
 <p> <br></br>
 	Ovaisi, Zohreh, Kathryn Vasilaky, Elena Zheleva. Propensity-independent Bias Recovery in Offline Learning-to-rank Systems, (2021) <em>44th International ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR)</em>.
 	<br></br>
