--- a/publications.html
+++ b/publications.html
@@ -65,12 +65,11 @@
 				
 <h1>publications</h1>
 <p> <br></br>
-	Hamilton, S. and Richards, T. and Shafran, A. and Vasilaky, K. <a href= https://onlinelibrary.wiley.com/doi/full/10.1111/ajae.12273>Farm labor productivity and the impact of mechanization
-aky</a>, (2021) <em>American Journal of Agricultural Economics, 104 (4), 1435-1459.</em>.
+	Hamilton, S. and Richards, T. and Shafran, A. and Vasilaky, K. <a href= https://onlinelibrary.wiley.com/doi/full/10.1111/ajae.12273>Farm labor productivity and the impact of mechanization</a>, (2021) <em>American Journal of Agricultural Economics, 104 (4), 1435-1459.</em>.
 	<br></br>
 
 <p> <br></br>
-	Ovaisi, Zohreh, Kathryn Vasilaky, Elena Zheleva. Propensity-independent Bias Recovery in Offline Learning-to-rank Systems, (2021) <em>44th International ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR)</em>.
+	Ovaisi, Zohreh, Kathryn Vasilaky, Elena Zheleva. <a href= https://dl.acm.org/doi/abs/10.1145/3404835.3463097>Propensity-independent Bias Recovery in Offline Learning-to-rank Systems</a>, (2021) <em>44th International ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR)</em>.
 	<br></br>
 	Vasilaky, Kathryn, Michelle Brock, <a href= https://doi.org/10.1007/s40881-020-00090-5>Power(ful) Guidelines for Experimental Economists</a>, (2020) <em>Journal of the Experimental Science Association</em>.
 	<br></br>
