--- a/publications.html
+++ b/publications.html
@@ -105,20 +105,19 @@
 	<br></br>
 	
 	<br></br>
-	Hill, Ruth, Carolina Mej&iacutea-Mantilla, Kathryn Vasilaky, "Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. 8627, (2020) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda"></a> R&R</em>.
-
-	<br></br>
-<!--	Alfredo, Katherine, Aur&eacutelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water use nudges: Does metering matter?<em></em>.
+<!--	Alfredo, Katherine, Aur&eacutelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water use nudges: Does metering matter?" (2023) R&R<em></em>.
 	<br></br>
 
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
 	
-		Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime" (2020), <a href="female_competition.pdf">Working Paper</a>.
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime" (2023), under review <a href="female_competition.pdf">Working Paper</a>.
 	<br></br>
-	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" <em> Working Paper, (2020)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>. 
+	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" (2023) under review  <em> Working Paper</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>. 
 
 	<!--<a href="https://editorialexpress.com/cgi-bin/conference/download.cgi?db_name=NEUDC2015&paper_id=519 ">draft.</a>-->
-	
+	<br></br>
+	Hill, Ruth, Carolina Mej&iacutea-Mantilla, Kathryn Vasilaky, "Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. 8627, (2020) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda"></a> R&R</em>.
+
 	<br></br>
 	Vasilaky, Kathryn, "A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2019) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
