--- a/publications.html
+++ b/publications.html
@@ -105,7 +105,7 @@
 	<br></br>
 	
 	<br></br>
-<!--	Alfredo, Katherine, Aur&eacutelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water use nudges: Does metering matter?" (2023) R&R<em></em>.
+	Alfredo, Katherine, Aur&eacutelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water use nudges: Does metering matter?" (2023) R&R<em></em>.
 	<br></br>
 
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
