--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ and <a href="https://groups.google.com/d/forum/women-in-econ"> Women in Economic
  -->
  <br></br>
 
-						I am an avid farmer, and have volunteered with <a href="https://wwoof.net/"> WOOF</a> in several countries; am a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects granular weather data; and in my past life was a professional ballet dancer with the <a href="https://www.sfballet.org/"> San Francisco Ballet</a> company. 
+						I am an avid farmer, and have volunteered with <a href="https://wwoof.net/"> WOOF</a> in several countries; am a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects granular weather data; a member of <a href="https://econ4ua.org/"> Economists for Ukraine</a>; and in my past life was a professional ballet dancer with the <a href="https://www.sfballet.org/"> San Francisco Ballet</a> company. 
  <br></br>
  <!-- 
 <a href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @KatyaVasilaky</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
