--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,13 @@
 				<div id="content">
 				
 <h1>publications</h1>
-<p> <br></br>
+					
+<p> 
+	<br></br>
+	Alfredo, Katherine, Aur&eacutelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water use nudges: Does metering matter?" (2023) Journal of Environmental Economics and Management, forthcoming <em></em>.
+	<br></br>
+
+	<br></br>
 	Hamilton, S. and Richards, T. and Shafran, A. and Vasilaky, K. <a href= https://onlinelibrary.wiley.com/doi/full/10.1111/ajae.12273>Farm labor productivity and the impact of mechanization</a>, (2022) <em>American Journal of Agricultural Economics, 104 (4), 1435-1459.</em>
 	<br></br>
 
@@ -104,10 +110,7 @@
 
 	<br></br>
 	
-	<br></br>
-	Alfredo, Katherine, Aur&eacutelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water use nudges: Does metering matter?" (2023) R&R<em></em>.
-	<br></br>
-
+	
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
 	
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime" (2023), under review <a href="female_competition.pdf">Working Paper</a>.
