--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@
 					
 <p> 
 	<br></br>
-	Alfredo, Katherine, Aur&eacutelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water use nudges: Does metering matter?" (2023) Journal of Environmental Economics and Management, forthcoming <em></em>.
+	Alfredo, Katherine, Aur&eacutelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water use nudges: Does metering matter?" (2023) <em>Journal of Environmental Economics and Management</em>, forthcoming <em></em>.
 	<br></br>
 
 	<br></br>
