--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@
 					
 <p> 
 	<br></br>
-	Alfredo, Katherine, Aur&eacutelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water use nudges: Does metering matter?" (2023) <em>Journal of Environmental Economics and Management</em>, forthcoming <em></em>.
+	Vasilaky, Kathryn and Harou, Aurelie, and Alfredo, Katherine and Kapur, Ishita. <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a>(2023) <em>Journal of Environmental Economics and Management</em>, https://doi.org/10.1016/j.jeem.2023.102802 <em></em>.
 	<br></br>
 
 	<br></br>
