--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@
 					
 <p> 
 	<br></br>
-	Vasilaky, Kathryn and Harou, Aurelie, and Alfredo, Katherine and Kapur, Ishita. <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a>(2023) <em>Journal of Environmental Economics and Management</em>, https://doi.org/10.1016/j.jeem.2023.102802 <em></em>.
+	Vasilaky, Kathryn and Harou, Aurelie, and Alfredo, Katherine and Kapur, Ishita. <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a>, (2023) <em>Journal of Environmental Economics and Management</em><em></em>.
 	<br></br>
 
 	<br></br>
@@ -83,25 +83,25 @@
 	<br></br>
 		<!--Hernandez-Aguilera, J. M. Mauerman, A. Herrera, K. Vasilaky, W. Baethgen, A. Loboguerrero, R. Diro, Y. Tekeste, D. Osgood, <a href="https://www.mdpi.com/2073-4336/11/1/15">Framed experiments and Games in Agriculture: A systematic review of the 21st century in economics and social science</a>, (2020) <em>Games</em>. forthcoming.-->
 		
-	Enenkel, M., M.E. Brown, J.V. Vogt, J.L.McCarty, A.Reid Bell, D. Guha-Sapir, W.A. Dorigo, K. Vasilaky, M. Svoboda, R. Bonifacio, S. Voigt, M. Anderson, C. Funk, D.E. Osgood, C. Hain, P. Vinck, <a href= https://link.springer.com/article/10.1007/s10584-020-02878-0?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst>Why predict climate hazards if we need to understand impacts? Mobile technologies could put humans back into the equation</a>,(2020)<em> Climatic Change</em>.
+	Enenkel, M., M.E. Brown, J.V. Vogt, J.L.McCarty, A.Reid Bell, D. Guha-Sapir, W.A. Dorigo, K. Vasilaky, M. Svoboda, R. Bonifacio, S. Voigt, M. Anderson, C. Funk, D.E. Osgood, C. Hain, P. Vinck, <a href= https://link.springer.com/article/10.1007/s10584-020-02878-0?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst>Why predict climate hazards if we need to understand impacts? Mobile technologies could put humans back into the equation</a>, (2020)<em> Climatic Change</em>.
 
 	<br></br>
-	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="https://www.journals.uchicago.edu/doi/10.1086/713882">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda</a>, (2020) <em>Economic Development and Cultural Change</em>.
+	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="https://www.journals.uchicago.edu/doi/10.1086/713882">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda</a>, (2020)<em>Economic Development and Cultural Change</em>.
 	<br></br>
 	Vasilaky, Kathryn, Sof&iacutea Mart&iacutenez S&aacuteez, Radomst Stanimirova, Daniel Osgood, <a href="https://www.mdpi.com/2073-4336/11/1/15">Perceptions of Farm Size Heterogeneity and Demand for Group Index Insurance</a>, (2020) <em>Games</em>.
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, <a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia</a>, (2019) <em> Journal of Development Studies</em>.
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, <a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia</a>, (2019)<em> Journal of Development Studies</em>.
 	<!-- DOI: 10.1080/00220388.2018.1554207-->
 	<br></br>
-	Vasilaky, Kathryn, Kenneth Leonard, <a href = https://www.journals.uchicago.edu/doi/10.1086/697430> As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda</a>, (2018) <em> Economic Development and Cultural Change, 66(4): 755-792. </em>
+	Vasilaky, Kathryn, Kenneth Leonard, <a href = https://www.journals.uchicago.edu/doi/10.1086/697430> As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda</a>, (2018)<em> Economic Development and Cultural Change, 66(4): 755-792. </em>
 	(<a href="target_input_model.pdf">Supplementary derivations,</a> for the Target-Input model with Bayesian updating)
 	<br></br>
-	Vasilaky, Kathryn, Asif Islam, <a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>By Team or By Tournament? Incentives for Sharing Information in an Experimental Game</a>, (2018) <em> World Development</em>, 103: 216-225.
+	Vasilaky, Kathryn, Asif Islam, <a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>By Team or By Tournament? Incentives for Sharing Information in an Experimental Game</a>, (2018)<em> World Development</em>, 103: 216-225.
 	<br></br>
-	Vasilaky, Kathryn, <a href= https://academic.oup.com/ajae/article-abstract/95/2/376/70881?redirectedFrom=fulltext>Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?</a>, (2013) <em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
+	Vasilaky, Kathryn, <a href= https://academic.oup.com/ajae/article-abstract/95/2/376/70881?redirectedFrom=fulltext>Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?</a>, (2013)<em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
 	<br></br>
 
-	Haack, R, A., K. O. Britton, E. G. Brockerhoff, J. F. Cavey, L. J. Garrett, M. Kimberley, F. Lowenstein, A. Nuding, L. J. Olson, J. Turner, and K. N. Vasilaky. ``Effectiveness of the International Phytosanitary Standard ISPM No. 15.'' (2014) <em> PLoS ONE, 9(5).</em>
+	Haack, R, A., K. O. Britton, E. G. Brockerhoff, J. F. Cavey, L. J. Garrett, M. Kimberley, F. Lowenstein, A. Nuding, L. J. Olson, J. Turner, and K. N. Vasilaky. ``Effectiveness of the International Phytosanitary Standard ISPM No. 15,'' (2014)<em> PLoS ONE, 9(5).</em>
 
 	<br></br>
 
