--- a/publications.html
+++ b/publications.html
@@ -113,9 +113,9 @@
 	
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
 	
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime" (2023), under review <a href="female_competition.pdf">Working Paper</a>.
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime" (2023), R&R Journal of Economic Behavior and Organization review <a href="female_competition.pdf">Working Paper</a>.
 	<br></br>
-	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" (2023) under review  <a href="http://deankarlan.com/Academic-Papers.html">Working Paper</a></em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>. 
+	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" (2023) under review  <a href="http://deankarlan.com/Academic-Papers.html">R&R Journal of Development Economics Paper</a></em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>. 
 
 	<!--<a href="https://drive.google.com/file/d/1a4-BGia1TuHsm6XDGfSuYVUnoQCo66uw/view">draft.</a>-->
 	<br></br>
