--- a/publications.html
+++ b/publications.html
@@ -86,7 +86,7 @@
 	Enenkel, M., M.E. Brown, J.V. Vogt, J.L.McCarty, A.Reid Bell, D. Guha-Sapir, W.A. Dorigo, K. Vasilaky, M. Svoboda, R. Bonifacio, S. Voigt, M. Anderson, C. Funk, D.E. Osgood, C. Hain, P. Vinck, <a href= https://link.springer.com/article/10.1007/s10584-020-02878-0?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst>Why predict climate hazards if we need to understand impacts? Mobile technologies could put humans back into the equation</a>, (2020)<em> Climatic Change</em>.
 
 	<br></br>
-	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="https://www.journals.uchicago.edu/doi/10.1086/713882">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda</a>, (2020)<em>Economic Development and Cultural Change</em>.
+	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="https://www.journals.uchicago.edu/doi/10.1086/713882">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda</a>,(2020)<em> Economic Development and Cultural Change</em>.
 	<br></br>
 	Vasilaky, Kathryn, Sof&iacutea Mart&iacutenez S&aacuteez, Radomst Stanimirova, Daniel Osgood, <a href="https://www.mdpi.com/2073-4336/11/1/15">Perceptions of Farm Size Heterogeneity and Demand for Group Index Insurance</a>, (2020) <em>Games</em>.
 	<br></br>
@@ -113,7 +113,7 @@
 	
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
 	
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime" (2023), R&R Journal of Economic Behavior and Organization review <a href="female_competition.pdf">Working Paper</a>.
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime" (2023), R&R Journal of Economic Behavior and Organization<a href="female_competition.pdf">Working Paper</a>.
 	<br></br>
 	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" (2023) under review  <a href="http://deankarlan.com/Academic-Papers.html">R&R Journal of Development Economics Paper</a></em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>. 
 
