--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						
 						<p>								
 
-						I am an <a href="https://www.cob.calpoly.edu/directory/profile/kathryn-vasilaky/">Assistant Professor</a> at the Department of Economics, Orfalea College of Business, Cal Poly and Research Affiliate at the <a href="https://iri.columbia.edu/">International Research Institute for Climate and Society</a> at Columbia University. 
+						I am an <a href="https://www.cob.calpoly.edu/directory/profile/kathryn-vasilaky/">Associate Professor</a> at the Department of Economics, Orfalea College of Business, Cal Poly and Research Affiliate at the <a href="https://iri.columbia.edu/">International Research Institute for Climate and Society</a> at Columbia University. 
 
 
 						 
