--- a/posts.html
+++ b/posts.html
@@ -66,6 +66,10 @@
 
 						
 <p>	
+Invited Speaker, What Works? Exploring Solutions for Water Conservation in Agriculture, World Bank's Office of the Chief Economist of the Sustainable Development Practice Group, 6/13/23
+<br></br>	
+The effects of bonus pay when working in a team; evidence from strawberry pickers in the field, Joint Initiative for Latin American Experimental Economics (JILAEE), 2/22
+<br></br>
 Conference Speaker, The effects of bonus pay when working in a team; evidence from strawberry pickers in the field, Joint Initiative for Latin American Experimental Economics (JILAEE), 2/22
 <br></br>
 Seminar Speaker, The effects of bonus pay when working in a team; evidence from strawberry pickers in the field. Centre for Environmental and Resource Economics (CERE), 10/21
