--- a/publications.html
+++ b/publications.html
@@ -66,6 +66,7 @@
 <h1>publications</h1>
 					
 <p> 
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime" (2023), <em> Journal of Economic Behavior and Organization, </em><a href="female_competition.pdf">conditionally accepted</a>.
 	<br></br>
 	Vasilaky, Kathryn and Harou, Aurelie, and Alfredo, Katherine and Kapur, Ishita. <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a>, (2023) <em>Journal of Environmental Economics and Management</em><em></em>.
 	<br></br>
@@ -113,8 +114,6 @@
 	
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
 	
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime" (2023), <em>R&R Journal of Economic Behavior and Organization, </em><a href="female_competition.pdf">Working Paper</a>.
-	<br></br>
 	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" (2023)<em> R&R Journal of Development Economics</em>,  <a href="http://deankarlan.com/Academic-Papers.html">Working Paper</a> and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>. 
 
 	<!--<a href="https://drive.google.com/file/d/1a4-BGia1TuHsm6XDGfSuYVUnoQCo66uw/view">draft.</a>-->
