--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@
 <h1>publications</h1>
 					
 <p> 
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime" (2023), <em> Journal of Economic Behavior and Organization, </em><a href="female_competition.pdf">conditionally accepted</a>.
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, <a href="female_competition.pdf">Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime</a> (2023), <em> Journal of Economic Behavior and Organization, conditionally accepted</em>.
 	<br></br>
 	Vasilaky, Kathryn and Harou, Aurelie, and Alfredo, Katherine and Kapur, Ishita. <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a>, (2023) <em>Journal of Environmental Economics and Management</em><em></em>.
 	<br></br>
