--- a/photos.html
+++ b/photos.html
@@ -69,7 +69,7 @@
 						<p>
 
 						
-					<img src="kv3.png" style = "width:400px;height:400;">
+					<img src="cat_dot.jpg" style = "width:400px;height:400;">
 
 						</p>
 						
