--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@
 <h1>publications</h1>
 					
 <p> 
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime</a> (2023), <em> Journal of Economic Behavior and Organization, accepted</em>.
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">How social structure shapes female competition throughout her lifetime</a> (2023), <em> Journal of Economic Behavior and Organization, 216, 433-456</em>.
 	<br></br>
 	Vasilaky, Kathryn and Harou, Aurelie, and Alfredo, Katherine and Kapur, Ishita. <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a>, (2023) <em>Journal of Environmental Economics and Management</em><em></em>.
 	<br></br>
