--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 								<br></br>
 								<a href="posts.html">seminars</a><br />
 								<br></br>
+								<a href="photos.html">seminars</a><br />
+								<br></br>
 								<a href="cv.html">cv</a><br />
 				 			 </div>
 							 
