--- a/posts.html
+++ b/posts.html
@@ -51,7 +51,7 @@
 								<br></br>
 								<a href="posts.html">seminars</a><br />
 								<br></br>
-								<a href="joblistings.html">job listings</a><br />
+								<a href="photos.html">job listings</a><br />
 								<br></br>
 								<a href="cv.html">cv</a><br />
 				 			 </div>
