--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<br></br>
 								<a href="posts.html">seminars</a><br />
 								<br></br>
-								<a href="photos.html">seminars</a><br />
+								<a href="photos.html">photos</a><br />
 								<br></br>
 								<a href="cv.html">cv</a><br />
 				 			 </div>
