--- a/photos.html
+++ b/photos.html
@@ -53,7 +53,7 @@
 								<br></br>
 								<a href="posts.html">seminars</a><br />
 								<br></br>
-								<a href="photos.html">job listings</a><br />
+								<a href="photos.html">photos</a><br />
 								<br></br>
 								<a href="cv.html">cv</a><br />
 				 			 </div>
