--- a/photos.html
+++ b/photos.html
@@ -82,6 +82,8 @@
 					<img src="IMG_4359.JPG" style = "width:400px;height:400;">
 					<img src="IMG_4458.JPG" style = "width:400px;height:400;">
 					<img src="IMG_6223.JPG" style = "width:400px;height:400;">
+					<img src="mpana2.JPG" style = "width:400px;height:400;">
+					<img src="mpana2.JPG" style = "width:400px;height:400;">
 		
 						</p>
 						
