--- a/photos.html
+++ b/photos.html
@@ -70,10 +70,11 @@
 
 						
 					<img src="2015-04-23 11.50.49.jpg" style = "width:400px;height:400;">
-					<img src="2015-04-25 13.25.19.jpg" style = "width:400px;height:400;">
-					<img src="2016-01-20 14.52.50.jpg" style = "width:400px;height:400;">
+					<img src="IMG_0996.jpg" style = "width:400px;height:400;">
+					<img src="IMG_1172.jpg" style = "width:400px;height:400;">
 					<img src="IMG_5329" style = "width:400px;height:400;">
-	
+					<img src="IMG_5329.jpg" style = "width:400px;height:400;">
+							
 					<img src="IMGP0066.JPG" style = "width:400px;height:400;">
 			
 					<img src="IMG_1005-001.jpg" style = "width:400px;height:400;">
