--- a/photos.html
+++ b/photos.html
@@ -84,6 +84,7 @@
 					<img src="IMG_4458.JPG" style = "width:400px;height:400;">
 					<img src="IMG_6223.JPG" style = "width:400px;height:400;">
 					<img src="mpana2.JPG" style = "width:400px;height:400;">
+					<img src="2016-01-21 13.13.54.jpg" style = "width:400px;height:400;">
 			
 		
 						</p>
