--- a/field.html
+++ b/field.html
@@ -125,8 +125,9 @@ Sainte Foy de Belves, Dordogne, France, <a href = https://app.wwoof.fr> WOOF Fra
 Gaspé, Quebec, Canada, <a href = https://wwoof.ca/> Woof Canada</a>, Summer 2007
 <br></br>				
 
-						
-<a href="photos.html">photos</a><br />
+<h1><a href="photos.html">photos</a></h1>						
+
+					<br />
 
 						</p>
 						
