--- a/photos.html
+++ b/photos.html
@@ -89,7 +89,7 @@
 
 					<img src="17504615_10154172384181568_6549760118905349306_o.jpg" style = "width:400px;height:400;">
 					<img src="IMG_6098.JPG" style = "width:400px;height:400;">
-					<img src="2016-01-21 13.13.54.jpg" style = "width:400px;height:400;">
+					<img src="DSC00259.JPG" style = "width:400px;height:400;">
 					<img src="kuruk.jpg" style = "width:400px;height:400;">
 			
 						
