--- a/photos.html
+++ b/photos.html
@@ -84,8 +84,12 @@
 					<img src="IMG_4458.JPG" style = "width:400px;height:400;">
 					<img src="IMG_6223.JPG" style = "width:400px;height:400;">
 					<img src="mpana2.JPG" style = "width:400px;height:400;">
-					<img src="2016-01-21 11.49.15.jpg" style = "width:400px;height:400;">
-					<img src="DSC03027.JPG" style = "width:400px;height:400;">
+					<img src="Jesus3.jpg" style = "width:400px;height:400;">
+					<img src="nsingana1-withchief.JPG" style = "width:400px;height:400;">
+
+							
+							
+							<img src="DSC03027.JPG" style = "width:400px;height:400;">
 
 					<img src="17504615_10154172384181568_6549760118905349306_o.jpg" style = "width:400px;height:400;">
 					<img src="IMG_6098.JPG" style = "width:400px;height:400;">
