--- a/teaching.html
+++ b/teaching.html
@@ -63,6 +63,8 @@
 				<div id="content">
 				
 	<h1>teaching</h1>
+		Centre for Environmental and Resource Economics; Swedish University of Agricultural Sciences; Weeklong PhD Course on Machine Learning for Causal Inference (W/ <a="https://eduardo-zambrano.github.io/">Eduardo Zambrano</a>), September 11-15, 2023.
+		<br></br>
 		Cal Poly, Economics 552 Causal Inference for Machine Learning and , Spring 2022 - present. 
 		<br></br>
 		Cal Poly, Economics 580 Special Projects joint with the World Bank, Spring 2021 - present. 
