--- a/teaching.html
+++ b/teaching.html
@@ -69,7 +69,8 @@
 		<br></br>
 		Cal Poly, Economics 580 Special Projects joint with the World Bank, Spring 2021 - present. 
 		<br></br>
-		Cal Poly, Economics 395 Programming for Economics and Analytics, Spring 2017 - present. Thanks to <a href="https://learn.datacamp.com/">DataCamp </a> for supplementary exercises. 
+		Cal Poly, Economics 395 Programming for Economics and Analytics, Spring 2017 - present. 
+					
 		<br></br>
 		Cal Poly, Economics 201 Survey of Economics, Winter 2017 - present
 		<br></br>
