--- a/posts.html
+++ b/posts.html
@@ -61,10 +61,12 @@
 							</div>
 				<div id="content">
 				
-						<h1>seminars</h1>
+						<h1>seminars and conferences</h1>
 
 						
 <p>	
+Conference Speaker, When the Pickings Are Good, Advances in Field Experiments, Chicago, Illinois, 9/19
+<br></br>
 Invited Speaker, What Works? Exploring Solutions for Water Conservation in Agriculture, World Bank's Office of the Chief Economist of the Sustainable Development Practice Group, 6/13/23
 <br></br>	
 The effects of bonus pay when working in a team; evidence from strawberry pickers in the field, Joint Initiative for Latin American Experimental Economics (JILAEE), 2/22
