--- a/index.html
+++ b/index.html
@@ -162,12 +162,9 @@ for <a href="https://fcni.org//"> Family Care Network </a>
 <div id="footer">
 			<!-- Copyright @ 2023 | All Rights Reserved </div> -->
 <aside class="side-box">
-    <h2>Upcoming Travel</h2>
     <ul>
-        <li>Conference ABC in XYZ, 20XX</li>
-        <li>Workshop DEF in UVW, 20XX</li>
-        <li>Meeting GHI in RST, 20XX</li>
-        <!-- Add more list items here -->
+        Conference ABC in XYZ, 20XX
+        Workshop DEF in UVW, 20XX
     </ul>
 </aside>
 </body>
