--- a/index.html
+++ b/index.html
@@ -163,8 +163,12 @@ for <a href="https://fcni.org//"> Family Care Network </a>
 			<!-- Copyright @ 2023 | All Rights Reserved </div> -->
 <aside class="side-box">
     <ul>
-        Conference ABC in XYZ, 20XX
-        Workshop DEF in UVW, 20XX
+Latest Updates:
+
+- Our paper " " was recently published in the Journal of Economic Behavior and Organization
+- Our paper "" was recently published in the Journal of Environmental Economics and Management
+- See this World Bank blog post covering our work: 
+
     </ul>
 </aside>
 </body>
