--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ for <a href="https://fcni.org//"> Family Care Network </a>
 		
 <div id="footer">
 			<!-- Copyright @ 2023 | All Rights Reserved </div> -->
-<aside class="side-box">
+<div id="content">
     <ul>
 Latest Updates:
 
@@ -170,6 +170,6 @@ Latest Updates:
 - See this World Bank blog post covering our work: 
 
     </ul>
-</aside>
+</div>
 </body>
 </html>
