--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@ for <a href="https://fcni.org//"> Family Care Network </a>
 <div id="content">
     <ul>
 Latest Updates:
-
-- Our paper " " was recently published in the Journal of Economic Behavior and Organization
-- Our paper "" was recently published in the Journal of Environmental Economics and Management
-- See this World Bank blog post covering our work: 
+<br></br>
+- Our paper " " was recently published in the Journal of Economic Behavior and Organization <br></br>
+- Our paper "" was recently published in the Journal of Environmental Economics and Management <br></br>
+- See this World Bank blog post covering our work: <br></br>
 
     </ul>
 </div>
