--- a/index.html
+++ b/index.html
@@ -161,14 +161,18 @@ for <a href="https://fcni.org//"> Family Care Network </a>
 		
 <div id="footer">
 			<!-- Copyright @ 2023 | All Rights Reserved </div> -->
-<div>
-    <ul>
-Latest Updates:
-<br></br>
-Our paper <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">How social structure shapes female competition throughout her lifetime</a> was recently published in the Journal of Economic Behavior and Organization <br></br>
-Our paper  <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a> was recently published in the Journal of Environmental Economics and Management <br></br>
 
+<div class="latest-updates">
+    <h2>Latest Updates</h2>
+    <ul>
+        <li>Our paper <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">How social structure shapes female competition throughout her lifetime</a> was recently published in the Journal of Economic Behavior and Organization <br></br>
+</li>
+        <li>Our paper  <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a> was recently published in the Journal of Environmental Economics and Management <br></br>
+</li>
+        <!-- More updates -->
     </ul>
-</div>
+    <!-- Additional content -->
+</div>	
+
 </body>
 </html>
