--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ for <a href="https://fcni.org//"> Family Care Network </a>
 <div id="footer">
 			<!-- Copyright @ 2023 | All Rights Reserved </div> -->
 
-<div class="latest-updates">
+<!-- <div class="latest-updates">
     <h2>Latest Updates</h2>
     <ul>
         <li>Our paper <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">How social structure shapes female competition throughout her lifetime</a> was recently published in the Journal of Economic Behavior and Organization <br></br>
@@ -172,7 +172,7 @@ for <a href="https://fcni.org//"> Family Care Network </a>
         <!-- More updates -->
     </ul>
     <!-- Additional content -->
-</div>	
+</div>	 -->
 
 </body>
 </html>
