--- a/joe.html
+++ b/joe.html
@@ -64,11 +64,13 @@
 <h1>Cal Poly Econ is hiring!</h1>
 
 <br></br>
+<h2>
 <a href="https://www.aeaweb.org/joe/listing.php?JOE_ID=2023-02_111473196">JOE Listing Cole</a>  <br></br>	
-
+</h2>
 <br></br>
-					
-Our faculty:					
+<h1>Our faculty:</h1>					
+	
+<br></br>					
 <a href="https://sites.google.com/site/matthewtcoleecon/ ">Matthew Cole</a>  <br></br>				
 International Trade and Applied Microeconomics <br></br>
 <br></br>
