--- a/joe.html
+++ b/joe.html
@@ -64,10 +64,9 @@
 <h1>Cal Poly Econ is hiring!</h1>
 
 <br></br>
-<h2>
-<a href="https://www.aeaweb.org/joe/listing.php?JOE_ID=2023-02_111473196">JOE Listing Cole</a>  <br></br>	
-</h2>
+<a href="https://www.aeaweb.org/joe/listing.php?JOE_ID=2023-02_111473196">JOE Listing</a>  <br></br>	
 <br></br>
+					
 <h1>Our faculty:</h1>					
 	
 <br></br>					
