--- a/index.html
+++ b/index.html
@@ -81,8 +81,12 @@
 
 						 <!-- where I teach Econ 201 and <a href="http://catalog.calpoly.edu/search/?P=ECON%20395">Econ 395</a>.  -->
 						<br></br>
-						My research is in experimental and development economics, as well as the intersection of data science and econometrics.  In my applied work I focus on the economic development via group-based technology adoption, and gender and competition. In my methodological work I focus on bias correction methods - where the bias may be statisical, user-driven, or algorithmic. 
+					I have over a decade of experience in the area of experimental and development economics, with a focus on the design of field experiments in Sub Saharan Africa, India, Central and North America, and East Asia. I focus on how groups, personal networks and cultural dynamics influence individual behavior, particularly when it comes to technology adoption. And how this differs by gender.
+					I also conduct research at the intersection of data science and econometrics in which I study how bias correction methods can influence how choices are presented to individuals.
 
+<!-- 					
+						My research is in experimental and development economics, as well as the intersection of data science and econometrics.  In my applied work I focus on the economic development via group-based technology adoption, and gender and competition. In my methodological work I focus on bias correction methods - where the bias may be statisical, user-driven, or algorithmic. 
+ -->
 						 <!-- I'm interested in how social networks and group behavior affect information sharing and technology adoption, and how this differs across gender.  -->
 						<br></br>
 						
