--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 						 <!-- where I teach Econ 201 and <a href="http://catalog.calpoly.edu/search/?P=ECON%20395">Econ 395</a>.  -->
 						<br></br>
-					I have over a decade of experience in the area of experimental and development economics, with a focus on the design of field experiments in Sub Saharan Africa, India, Central and North America, and East Asia. I focus on how groups, personal networks and cultural dynamics influence individual behavior, particularly when it comes to technology adoption. And how this differs by gender.
+					I have over a decade of experience in the areas of experimental and development economics, with a focus on the design of field experiments in Sub Saharan Africa, India, Central and North America, and East Asia. I focus on how groups, personal networks and cultural dynamics influence individual behavior, particularly when it comes to technology adoption, and how this differs by gender.
 					I also conduct research at the intersection of data science and econometrics in which I study how bias correction methods can influence how choices are presented to individuals.
 
 <!-- 					
