--- a/posts.html
+++ b/posts.html
@@ -69,13 +69,11 @@ Conference Speaker, When the Pickings Are Good, Advances in Field Experiments, C
 <br></br>
 Invited Speaker, What Works? Exploring Solutions for Water Conservation in Agriculture, World Bank's Office of the Chief Economist of the Sustainable Development Practice Group, 6/13/23
 <br></br>	
-The effects of bonus pay when working in a team; evidence from strawberry pickers in the field, Joint Initiative for Latin American Experimental Economics (JILAEE), 2/22
+Conference Speaker, The effects of bonus pay when working in a team; evidence from strawberry pickers in the field, Joint Initiative for Latin American Experimental Economics (JILAEE), 2/3/22
 <br></br>
-Conference Speaker, The effects of bonus pay when working in a team; evidence from strawberry pickers in the field, Joint Initiative for Latin American Experimental Economics (JILAEE), 2/22
+Seminar Speaker, The effects of bonus pay when working in a team; evidence from strawberry pickers in the field. Centre for Environmental and Resource Economics (CERE), 10/13/21
 <br></br>
-Seminar Speaker, The effects of bonus pay when working in a team; evidence from strawberry pickers in the field. Centre for Environmental and Resource Economics (CERE), 10/21
-<br></br>
-Conference Speaker, Revealing Group Choices: the Demand for Index Insurance, Experimental Economics Association, Los Angeles, California, 10/19
+Conference Speaker, Revealing Group Choices: the Demand for Index Insurance, Experimental Economics Association, Los Angeles, California, 10/10/19
 <br></br>
 Conference Speaker, Revealing Group Choices: the Demand for Index Insurance, Advances in Field Experiments, Chicago, Illinois, 9/19
 <br></br>
