--- a/cv.html
+++ b/cv.html
@@ -64,7 +64,7 @@
 
 						</br>
 					   <a href="https://github.com/kathrynthegreat/kathrynthegreat.github.io/blob/master/CV.pdf">
-				         <img src="kv10.png" style = "width:400px;height:400;">
+				         <img src="kv10.jpeg" style = "width:400px;height:400;">
 
 				      </a>
 
