--- a/field.html
+++ b/field.html
@@ -66,6 +66,8 @@
 						<h1>grants</h1>
 						
 						<p>
+Principal Investigator, Noyce School of Computing, Cal Poly, Selection Bias in Learning to Rank $14,000, 2023-2024
+<br></br>
 Co-Principal Investigator, RSCA, Cal Poly, Nudging Women into Business and Economics $18,000, 2021-2022
 <br></br>
 Co-Principal Investigator, USDA, Immigration Reform and Farm Labor Shortages $500,000, 2019-2021
