--- a/publications.html
+++ b/publications.html
@@ -109,7 +109,7 @@
 	<h1>working papers</h1>
 
 	<br></br>
-	
+	Vasilaky, Kathryn, Aric Shafran, "Intraday farm productivity bonuses and their peer effects: Evidence from a field experiment" <em> Under review.</em> 
 	
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
 	
