--- a/publications.html
+++ b/publications.html
@@ -65,6 +65,8 @@
 <h1>publications</h1>
 					
 <p> 
+	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" (2023)<em>Journal of Development Economics</em>,  <a href="http://deankarlan.com/Academic-Papers.html">accepted</a> and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>. 
+	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">How social structure shapes female competition throughout her lifetime</a> (2023), <em> Journal of Economic Behavior and Organization, 216, 433-456</em>.
 	<br></br>
 	Vasilaky, Kathryn and Harou, Aurelie, and Alfredo, Katherine and Kapur, Ishita. <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a>, (2023) <em>Journal of Environmental Economics and Management, 119, 102802</em><em></em>. <a href= https://youtu.be/SCgRFqlZS0w>Video w/ Interviews</a>
@@ -113,7 +115,6 @@
 	<br></br>
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
 	
-	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" (2023)<em> R&R Journal of Development Economics</em>,  <a href="http://deankarlan.com/Academic-Papers.html">Working Paper</a> and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>. 
 
 	<!--<a href="https://drive.google.com/file/d/1a4-BGia1TuHsm6XDGfSuYVUnoQCo66uw/view">draft.</a>-->
 	<br></br>
