--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@
 <p> 
 	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky <a href="http://deankarlan.com/Academic-Papers.html">Improving Smallholder Agriculture via Video-BasedGroup Extension</a> (2024)<em> Journal of Development Economics</em>, accepted, <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>. 
 	<br></br>
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">How social structure shapes female competition throughout her lifetime</a> (2023), <em> Journal of Economic Behavior and Organization, 216, 433-456</em>.
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">How social structure shapes female competition throughout her lifetime</a> (2023) <em> Journal of Economic Behavior and Organization, 216, 433-456</em>.
 	<br></br>
 	Vasilaky, Kathryn and Harou, Aurelie, and Alfredo, Katherine and Kapur, Ishita. <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a>, (2023) <em>Journal of Environmental Economics and Management, 119, 102802</em><em></em>. <a href= https://youtu.be/SCgRFqlZS0w>Video w/ Interviews</a>
 	<br></br>
