--- a/publications.html
+++ b/publications.html
@@ -109,7 +109,8 @@
 
 	
 	<h1>working papers</h1>
-
+	<br></br>
+	Aubrac,Charlotte, Christopher Magomba, Soumya Balasubramanya, Kathryn Vasilaky, "Realized and elicited cooperation under water scarcity: Evidence from a field experiment in Tanzania" <em> Under review.</em> 
 	<br></br>
 	Vasilaky, Kathryn, Aric Shafran, "Intraday farm productivity bonuses and their peer effects: Evidence from a field experiment" <em> Under review.</em> 
 	<br></br>
