--- a/cv.html
+++ b/cv.html
@@ -65,7 +65,7 @@
 						</br>
 					 
 				         <img src="kv12.jpeg" style = "width:400px;height:400;">
-						   <a href="https://github.com/kathrynthegreat/kathrynthegreat.github.io/blob/master/CV.pdf">cv</a><br />
+						   <a href="https://github.com/kathrynthegreat/kathrynthegreat.github.io/blob/master/CV1.pdf">cv</a><br />
 
 				   
 
