--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						
 						<p>								
 
-						I am an <a href="https://www.cob.calpoly.edu/directory/profile/kathryn-vasilaky/">Associate Professor</a> at the Department of Economics, Orfalea College of Business, Cal Poly and Research Affiliate at the <a href="https://people.climate.columbia.edu/users/profile/kathryn-n-vasilaky">Climate School</a> at Columbia University. 
+						I am an <a href="https://www.cob.calpoly.edu/directory/profile/kathryn-vasilaky/">Associate Professor</a> at the Department of Economics, Orfalea College of Business, Faculty Affiliate of the Noyce School of Applied Computing, Cal Poly and Research Affiliate at the <a href="https://people.climate.columbia.edu/users/profile/kathryn-n-vasilaky">Climate School</a> at Columbia University. 
 
 
 						 
