--- a/cv.html
+++ b/cv.html
@@ -64,7 +64,7 @@
 
 						</br>
 					 
-				         <img src="kv12.jpeg" style = "width:200px;height:200;">
+				         <img src="signal-2024-02-15-121934.jpeg" style = "width:200px;height:200;">
 					<br></br>
 						   <a href="https://github.com/kathrynthegreat/kathrynthegreat.github.io/blob/master/CV1.pdf">cv</a><br />
 
