--- a/cv.html
+++ b/cv.html
@@ -64,7 +64,7 @@
 
 						</br>
 					 
-				         <img src="images/blur.jpeg" style = "width:400px;height:400;">
+				         <img src="images/close.jpeg" style = "width:400px;height:400;">
 					<br></br>
 						   <a href="https://github.com/kathrynthegreat/kathrynthegreat.github.io/blob/master/CV1.pdf">cv</a><br />
 
