--- a/index.html
+++ b/index.html
@@ -83,9 +83,15 @@
 
 						 <!-- where I teach Econ 201 and <a href="http://catalog.calpoly.edu/search/?P=ECON%20395">Econ 395</a>.  -->
 						<br></br>
-					I have over a decade of experience in the areas of experimental and development economics, with a focus on the design of field experiments in Sub Saharan Africa, India, Central and North America, and East Asia. I focus on how groups, personal networks and cultural dynamics influence individual behavior, particularly when it comes to technology adoption, and how this differs by gender.
-					I also conduct research at the intersection of data science and econometrics in which I study how bias correction methods can influence how choices are presented to individuals.
 
+				
+My research focuses on how groups, networks and cultural dynamics influence information exchange and technology adoption, and how these decisions differ by gender. My work traverses Sub-Saharan Africa, India, Central America, the US, and Ukraine. 
+I also conduct research at the intersection of computer science, machine learning and economic focusing on how biases in data affect algorithms that present choices to individuals and how consumers then make their choices in an online setting.
+My research has been published in the Journal of Development Economics, Journal of Economic Behavior and Organization, Journal of Environmental Economics and Management, Journal of the Experimental Science Association ACM SIGIR Conference on Research and Development in Information Retrieval, and Proceedings of the World Wide Web Conference, among others. 
+I received a Ph.D. from the University of Maryland and B.A. from Columbia University.
+
+
+		
 <!-- 					
 						My research is in experimental and development economics, as well as the intersection of data science and econometrics.  In my applied work I focus on the economic development via group-based technology adoption, and gender and competition. In my methodological work I focus on bias correction methods - where the bias may be statisical, user-driven, or algorithmic. 
  -->
