--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		
 		<div id="container">
 			<p>
-				<a href="#"><img src="close.jpg" style = "width:200px;height:200;" alt="" border="0" title=""  /></a><br />
+				<a href="#"><img src="close.jpg" style = "width:350;height:350;" alt="" border="0" title=""  /></a><br />
 			</p>
 		
 		<div >
