--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ My research focuses on how groups, networks and cultural dynamics influence info
 I also conduct research at the intersection of computer science, machine learning and economic focusing on how biases in data affect algorithms that present choices to individuals and how consumers then make their choices in an online setting.
 I received a Ph.D. from the University of Maryland and B.A. from Columbia University.
 	<br></br>
-I myelf like to farm and have volunteered with <a href="https://wwoof.net/"> WOOF</a> in several countries; am a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects granular weather data via low cost sensors; co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a>; a member of <a href="https://econ4ua.org/"> Economists for Ukraine</a>; do improvised theater; and in my past life was a professional ballet dancer with the <a href="https://www.sfballet.org/"> San Francisco Ballet</a> company.
+I myself like to farm and have volunteered with <a href="https://wwoof.net/"> WOOF</a> in several countries; am a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects granular weather data via low cost sensors; co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a>; a member of <a href="https://econ4ua.org/"> Economists for Ukraine</a>; do improvised theater; and in my past life was a professional ballet dancer with the <a href="https://www.sfballet.org/"> San Francisco Ballet</a> company.
 					
 
 		
