--- a/publications.html
+++ b/publications.html
@@ -46,16 +46,16 @@
 								<br></br>
 								<a href="publications.html"style="font-size: 14.5px;">publications</a><br />
 								<br></br>
-								<a href="research.html">research</a><br />
+								<a href="research.html" "style="font-size: 14.5px;">research</a><br />
 								<br></br>
-								<a href="teaching.html">teaching</a><br />
+								<a href="teaching.html" "style="font-size: 14.5px;">teaching</a><br />
 								<br></br>
-								<a href="field.html">grants, field work</a><br />
+								<a href="field.html" "style="font-size: 14.5px;">grants, field work</a><br />
 								<br></br>
-								<a href="posts.html">seminars</a><br />
+								<a href="posts.html" "style="font-size: 14.5px;">seminars</a><br />
 								<br></br>
 
-								<a href="cv.html">cv</a><br />
+								<a href="cv.html" "style="font-size: 14.5px;">cv</a><br />
 
 				 			 </div>
 						
