--- a/publications.html
+++ b/publications.html
@@ -48,7 +48,7 @@
 								<br></br>
 								<a href="teaching.html"style="font-size: 14.5px;">teaching</a><br />
 								<br></br>
-								<a href="field.html"style="font-size: 14.5px;">grants, field work</a><br />
+								<a href="field.html"style="font-size: 14.5px;">field work</a><br />
 								<br></br>
 								<a href="posts.html"style="font-size: 14.5px;">seminars</a><br />
 								<br></br>
