--- a/cv.html
+++ b/cv.html
@@ -42,7 +42,7 @@
 						<h1>pages</h1>
 							
 							<div id="menu">
-								<a href="index.html">bio</a><br />
+								<a href="index.html"style="font-size: 14.5px;">bio</a><br />
 								<br></br>
 								<a href="publications.html"style="font-size: 14.5px;">publications</a><br />
 								<br></br>
