--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@
 		
 		<div id="container">
 			<p>
-				<a href="#"><img src="header3.png" style = "width:50;height:100;"  alt="" border="0" title=""  /></a><br />
+				<a href="#"><img src="images/header4.png" style = "width:50;height:100;"  alt="" border="0" title=""  /></a><br />
 			</p>
 		
 		<div >
