--- a/posts.html
+++ b/posts.html
@@ -67,7 +67,7 @@
 <p>	
 	
 <br></br>	
-Conference Speaker, When the pickings are good: Estimating the dynamic effects of pay for performance for workers in the field, LACEA LAMES Annual Meeting 2023 Bogotá, Colombia, 11/15/23
+Conference Speaker, When the pickings are good: Estimating the dynamic effects of pay for performance for workers in the field, LACEA/LAMES Annual Meeting 2023 Bogotá, Colombia, 11/15/23
 <br></br>
 Invited Speaker, What Works? Exploring Solutions for Water Conservation in Agriculture, World Bank's Office of the Chief Economist of the Sustainable Development Practice Group, 6/13/23
 <br></br>	
