--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@
 <h1>publications</h1>
 					
 <p> 
-	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky <a href="http://deankarlan.com/Academic-Papers.html">Improving Smallholder Agriculture via Video-BasedGroup Extension</a> (2024)<em> Journal of Development Economics</em>, accepted. 
+	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky <a href="http://deankarlan.com/Academic-Papers.html">Improving Smallholder Agriculture via Video-BasedGroup Extension</a> (2024)<em> Journal of Development Economics</em>, forthcoming. 
 	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">How social structure shapes female competition throughout her lifetime</a> (2023) <em> Journal of Economic Behavior and Organization, 216, 433-456</em>.
 	<br></br>
