--- a/field.html
+++ b/field.html
@@ -85,10 +85,8 @@ PhD Thesis, World Bank DECRG (Markus Goldstein) Funding, Weak Ties and Technolog
 
 
 <h1>field work</h1>
-<h1><a href="photos.html"><p style="color:blue;">field photos</p></a></h1>	
-
-					
-					
+<a href="photos.html"><p style="color:blue;">field photos</p></a>
+<br></br>
 Central Coast (California) Immigration Reform and Farm Labor Shortages. USDA NIFA, June - October 2020.
 <br></br>
 India (Maharasthra)  Multimodal Satellite Rainfall Measurement for Index Insurance. Bill and Melinda Gates Foundation, May - June 2016 - 2017.
